First mouse move sent from aura seemed to always be zeroed out.

When a surface isn't produced the transformed co-ordinates end up
getting not copied and then would end up as being zero.

BUG=714378

Change-Id: I5d3251ec074089e664189e8d54468f498ef9b451